--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.0.0",
     "angular-notifier": "^6.0.1",
     "feather-icons": "^4.26.0",
+    "ngx-pagination": "^5.0.0",
     "ngx-progressbar": "^6.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
